# osis_python_repro

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api.html  config.yml  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: dev.md  feature_request.md
.github/workflows/: documentation.yml  python_check.yml
_sources/: index.rst.txt
_sources/source/: src.rst.txt
docs/: api.md  conf.py  index.rst  introduction.md
docs/source/: src.rst
scripts/: 01_run_regression.py
source/: modules.html  src.html
src/: __init__.py  config.py  data.py  model.py  test_model.py  utils.py
tests/: __init__.py
