[tool.poetry]
name = "src"
version = "0.12"
description = "An example package for the OSIS Reproducibility Workshop."
authors = [
    "Emanuel Sommer <emanuel.sommer@stat.uni-muenchen.de>",
    "Tobias Weber <tobias.weber@stat.uni-muenchen.de>",
    "Lisa Wimmer <lisa.wimmer@stat.uni-muenchen.de>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "0.6.0"
matplotlib = "3.8.3"
nptyping = "2.5.0"
numpy = "1.26.4"
pyyaml = "6.0.1"
types-pyyaml = "^6.0.12.20240311"
myst-parser = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"
sphinx-rtd-theme = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
